[package]
name = "common_logger"
version = "0.2.0"
edition = "2021"

# Configuration for the library
[lib]
name = "common_logger"
path = "src/lib.rs"
crate-type = ["cdylib"]

# Dependencies for the Rust project
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.31"
lazy_static = "1.4.0"
log = { version = "0.4.20" , features = ["kv_unstable"] }
threadpool = "1.8.1"
once_cell = "1.19.0"
backtrace = "0.3.69"
crossbeam-queue = "0.3.11"
colored = "2.1.0"

# Development dependencies (used during development and testing)
[dev-dependencies]
tempfile = "3.2.0"

# Build configuration
[build]
# Specify linker flags for the build process
# Adjust this based on your target platform
rustflags = ["-C", "link-arg=-undefined", "dynamic_lookup"]

# Build dependencies used during the build process
[build-dependencies]
cbindgen = "0.26.0"
